@@ -88,7 +88,7 @@ public class AcceptanceTestMojo extends AbstractMojoWithLoadedClasspath {
 
     public int exec(Class klass, String[] arguments, Map<String, String> environment) throws IOException,
             InterruptedException {
-        ProcessBuilder builder = new ProcessBuilder(createExternalCommand(klass, arguments));
+        ProcessBuilder builder = new ProcessBuilder(createExternalCommand(klass, arguments, externalRunner.getJvmArgs()));
         Map<String, String> env =  builder.environment();
         String classpath = externalRunner.getExcludeDependencies() ? getRobotJar() : getClassPathString();
         if (environment.containsKey("CLASSPATH")) {
@@ -104,12 +104,14 @@ public class AcceptanceTestMojo extends AbstractMojoWithLoadedClasspath {
         return process.waitFor();
     }
 
-    private List<String> createExternalCommand(Class klass, String[] arguments) {
+    private List<String> createExternalCommand(Class klass, String[] arguments, List<String> jvmArgs) {
         String javaHome = System.getProperty("java.home");
         String javaBin = join(File.separator, javaHome, "bin", "java");
         String className = klass.getCanonicalName();
         List<String> cmd = new ArrayList<String>();
-        cmd.addAll(Arrays.asList(new String[]{javaBin, className}));
+        cmd.add(javaBin);
+        cmd.addAll(jvmArgs);
+        cmd.add(className);
         cmd.addAll(Arrays.asList(arguments));
         System.out.println("Executing Robot with command:");
         System.out.println(cmd);
@@ -701,6 +703,7 @@ public class AcceptanceTestMojo extends AbstractMojoWithLoadedClasspath {
      *     <li>Environment variables can be added with <strong>environmentVariables</strong> map. CLASSPATH environment
      *     variable is added to the default dependencies.</li>
      *     <li><strong>excludeDependencies</strong> can be used to exclude the test scope dependencies from the classpath of the new process.</li>
+     *     <li><strong>jvmArgs</strong> can be used to specify JVM options</li>
      * </ul>
      *
      * Example:
@@ -709,6 +712,11 @@ public class AcceptanceTestMojo extends AbstractMojoWithLoadedClasspath {
      *          <foo>bar</foo>
      *          <CLASSPATH>this-should-be-seen-by-external-process.jar</CLASSPATH>
      *      </environmentVariables>
+     *      <jvmArgs>
+     *          <jvmArg>-XX:PermSize=128m</jvmArg>
+     *          <jvmArg>-XX:MaxPermSize=256m</jvmArg>
+     *          <jvmArg>-Xmx512m</jvmArg>
+     *      </jvmArgs>
      *      <excludeDependencies>true</excludeDependencies>
      * </externalRunner>]]></pre>
      *
